<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grade App</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Home Screen</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_grade">Edit a grade.</string>
    <string name="name">Assignment Name: </string>
    <string name="grade">Grade: </string>
    <string name="weight">Weight: </string>
    <string name="save">Save </string>
    <string name="delete">Delete </string>
    <string name="back">Back </string>
    <string name="add_grade">Add a grade. </string>
    <string name="compute_grade">Compute a desired grade. </string>
    <string name="gradescale">Edit the grade scale. </string>
    <string name="title_activity_grade_scale">Edit the grade scale </string>
    <string name="a">A: </string>
    <string name="b">B: </string>
    <string name="c">C: </string>
    <string name="d">D: </string>
    <string name="f">F: </string>
    <string name="title_activity_add_grade">Add a grade.</string>
    <string name="hintName">Name </string>
    <string name="hintGrade">Grade</string>
    <string name="hintWeight">Weight</string>
    <string name="title_activity_compute_grade">Compute a desired grade.</string>
    <string name="curr_grade">Current grade: </string>
    <string name="total_weight">Total Weight So Far: </string>
    <string name="desired_grade">Enter a desired grade: </string>

</resources>
