<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/list_view_gradient"
    android:padding="8dp" >

    <TextView
        android:id="@+id/desGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currGrade"
        android:layout_below="@+id/currWeight"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="35dp"
        android:text="@string/desired_grade"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/currWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currGrade"
        android:layout_below="@+id/currGrade"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="35dp"
        android:text="@string/total_weight"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/currGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:maxLines="1"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="25dp"
        android:text="@string/curr_grade"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/inputDesiredGrade"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/desGrade"
        android:layout_alignBottom="@+id/desGrade"
        android:layout_toRightOf="@+id/desGrade"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/inputDesiredGrade"
        android:contentDescription="@string/save"
        android:src="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/compute"
        android:layout_toLeftOf="@+id/compute"
        android:contentDescription="@string/back"
        android:src="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currWeight"
        android:layout_toRightOf="@+id/currGrade"
        android:padding="5dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/desGrade"
        android:layout_toRightOf="@+id/currWeight"
        android:padding="5dp"
        android:textColor="#000000"
        android:textSize="16sp" />

</RelativeLayout>