<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:background="#D4D4D4"
    android:padding="8dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/name"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/grade"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000" />
    
    <TextView
	    android:id="@+id/weight"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_below="@id/name"
	    android:layout_centerHorizontal="true"
	    android:padding="5dp"
	    android:text="@string/weight"
	    android:textColor="#000000"
	    android:textSize="16sp" />
    
    <TextView
        android:id="@+id/inputWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/weight"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/inputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/name"
        android:textSize="16sp"
        android:padding="5dp"
        android:textColor="#000000" />

	<TextView
	    android:id="@+id/inputGrade"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/grade"
	    android:textSize="16sp"
        android:padding="5dp"
	    android:textColor="#000000" />



</RelativeLayout>